@@ -5,6 +5,9 @@ Griffith ChangeLog
 (c) 2005-2009  Vasco Nunes, Piotr Ożarowski
 
 
+2009-07-07  Michael Jahn
+	* updated Allocine, CineMovies, IMDb-de, MovieMeter, Zelluloid plugin
+
 2009-07-06  Piotr Ożarowski
 	* Reorganize ORM stuff file structure (db module moved to db package)
 
